--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,24 +2,24 @@
   <header id="header">
     <h1>todos</h1>
   </header>
-  <form class="auth-form" name="form" ng-submit="login()">
-    <h2>Login</h2>
+  <form class="auth-form simple-form" novalidate name="form" ng-submit="login()">
+    <h2>Login / Signup</h2>
     <div class="form-group">
       <label>Email</label>
-      <input type="text" ng-model="user.email">
-      <p class="hint" ng-show="form.email.$error.required && submitted">Email is required</p>
+      <input type="email" ng-model="user.email" name="uEmail">
+      <p class="hint" ng-show="form.uEmail.$error.required && form.$submitted" required="">Email is required</p>
     </div>
 
     <div class="form-group">
       <label>Password</label>
-      <input type="password" ng-model="user.password">
-      <p class="hint" ng-show="form.password.$error.required && submitted">Password is required</p>
+      <input type="password" ng-model="user.password" name="uPassword">
+      <p class="hint" ng-show="form.uPassword.$error.required && form.$submitted" required="">Password is required</p>
     </div>
 
     <div class="actions">
       <label></label>
       <button type="submit">Login</button>
-      <button type="button" ng-click="signup()">Sign-Up</button>
+      <button type="submit" ng-click="signup()">Sign-Up</button>
     </div>
   </form>
 <section>
